[project]
name = "monte-carlo-sim"
version = "0.1.0"
description = "Monte Carlo simulations for agile forecasting"
authors = [{ name = "Federico" }]
requires-python = ">=3.11"

---

# 🧹 RUFF (lint + import + fix)
[tool.ruff]
line-length = 88
target-version = "py311"

# regole attive
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "B",   # bugbear (molto utile)
    "UP",  # pyupgrade
]

lint.ignore = [
    "E501",  # gestito da black
]

# fix automatici
fix = true

---

# 🎯 RUFF FORMAT (opzionale, se vuoi sostituire black)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"

---

# ⚫ BLACK (formatter)
[tool.black]
line-length = 88
target-version = ["py311"]

---

# 🧠 PYRIGHT
[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.11"

# molto importante per progetti modulari
venvPath = "."
venv = ".venv"

# qualità analisi
reportMissingImports = true
reportMissingTypeStubs = false
